Conclusions done until before Future work

--- a/Results.tex
+++ b/Results.tex
@@ -1039,7 +1039,7 @@ In order to compare the results from the developed CPA concentration retrieval w
   \caption{$C_a$ retrieved from the different atmospheric correction methods: (a) MoB-ELM, (b) Acolite-SWIR, (c) SeaDAS-SWIR and (d) SeaDAS-MUMM. The spectral matching and LUT approach was applied to $R_{rs}$ data from MoB-ELM method. The OC3 method was applied to the $R_{rs}$ data from the Acolite-SWIR, SeaDAS-SWIR and SeaDAS-MUMM.\label{fig:chlor_amaps} } 
 \end{figure}
 
-\autoref{fig:13262Chlor} shows a scatter plots among the $C_a$ retrieved from the different algorithms along with \gls{rma} regression line (red solid line), $R^2$ and \gls{rmse} values. These results show a week correlation among the algorithms with $R^2\leq0.65$ and high \gls{rmse}. The larger correlation occurs between MoB-ELM and SeaDAS-MUMM ($R^2=0.65$). Also, the Acolite-SWIR retrieved values span almost only in low concentrations. Some discretization can be observed in the MoB-ELM algorithm, where the two IOP datasets can be distinguished.
+\autoref{fig:13262Chlor} \todo{include regression values in a table?} shows a scatter plots among the $C_a$ retrieved from the different algorithms along with \gls{rma} regression line (red solid line), $R^2$ and \gls{rmse} values. These results show a week correlation among the algorithms with $R^2\leq0.65$ and high \gls{rmse}. The larger correlation occurs between MoB-ELM and SeaDAS-MUMM ($R^2=0.65$). Also, the Acolite-SWIR retrieved values span almost only in low concentrations. Some discretization can be observed in the MoB-ELM algorithm, where the two IOP datasets can be distinguished.
 
 % ------------------------------
 % \subsection{$C_a$ Comparison with {\it in situ} data}
