Conclusions chapter finished!

--- a/Acronyms.tex
+++ b/Acronyms.tex
@@ -69,3 +69,9 @@
 \newacronym{mumm}{MUMM}{Management Unit of the North Sea Mathematical Models}
 
 \newacronym{rma}{RMA}{Reduced Major Axis}
+
+\newacronym{hico}{HICO}{Hyperspectral Imager for the Coastal Ocean}
+
+\newacronym{aviris}{AVIRIS}{Airborne Visible/InfraRed Imaging Spectrometer}
+
+\newacronym{matlab}{MATLAB}{Matrix Laboratory}
