--- a/Summary.tex
+++ b/Summary.tex
@@ -1,7 +1,7 @@
 % !TEX root=Thesis_PhD.tex  
 % the previous is to reference main .bib
 %% CHAPTER
-\chapter{Conclusions and Future Work}\todo{change summary position}
+\chapter{Conclusions and Future Work}
 \label{ch:conc_future}
 This chapter includes a summary of this research, some discussions about the used methodology, the limitations of the used approach, the derived conclusions from the results and where this work could be taken as future work. The conclusions are separated into the main outcomes of this work: the MoB-ELM algorithm, and the retrieval of CPAs.
 
@@ -52,26 +52,40 @@ Some pixels from the lake shoreline include signal from the bottom causing outli
 \section{Future Work}
 \label{sec:futurework}
 % ------------------------------
+\subsection{More Data} 
+The presented work is a limited study using only a data set from just on site. The results need to be tested on a much larger set of data to see if the can be generalized. This implies that more {\it in situ} data need to be collected not only from the same area of study, but from other sites. Also, the uncertainties of the whole process need to be inferred.
+
+% ------------------------------
+\subsection{Algorithms Enhancement} 
+Some phenomena affecting the sensor-reaching signal were not included in this research. They could may or may not have a strong influence in the retrieval. A glint and adjacency effect correction could be included in the atmospheric correction, for example. The retrieval could be tested with and without these corrections to evaluate the sensitivity of them in the process.
+
+% ------------------------------
 \subsection{Hydrodynamics models} 
-The next step could be to use the validated results from the retrieval process for training hydrodynamics models to predict the future behavior of the water bodies. This would be based on previous work done by \cite{Pahlevan:2012b}, who used concentration maps obtained from the retrieval process using satellite imagery to train the ALGE hydrodynamic model. For example, the hydrodynamic model would allow us to monitor the dynamics of coastal and inland waters near river discharges. The maps of water constituent concentrations on the surface can be used to calibrate the hydrodynamic models.
+The results from the retrieval could be used for training hydrodynamics models to predict the water bodies behavior, as suggested by \cite{Pahlevan:2012} and \cite{GeraceThesis}. The spatial resolution of Landsat 8 allows for resolving fine features in the scene such as rivers, and river plumes. Therefore, the hydrodynamics model could be tested and/or calibrated with these data to simulate river and river discharges, for instance.
 
 % ------------------------------
 \subsection{Investigate New Sensor Enhancements for Future Missions}
-Water pixel spectra from a hyperspectral image (e.g. Hyperspectral Imager for the Coastal Ocean (HICO), Airborne Visible/InfraRed Imaging Spectrometer (AVIRIS)) could be modified to simulate data similar to Landsat 8 but with the addition of a new NIR band or red edge band. The retrieval process could be performed with these simulated data with and without the new NIR band in order to evaluate performance improvement. A similar analysis could be done to evaluate narrower spectral bandwidths available in Landsat 8 compared to those found in the MEdium Resolution Imaging Spectrometer (MERIS) and MODIS, for instance. 
+With the lessons learned in this work, new features could be investigated to help future ocean color mission designs. For example, water pixel spectra from a hyperspectral sensor (e.g. \gls{hico}, \gls{aviris}) could be modified to simulate data similar to Landsat 8 but with the addition of a new \gls{nir} band or red edge band. The retrieval process could be performed with these simulated data with and without the new NIR band in order to evaluate performance improvement. A similar analysis could be done to evaluate narrower spectral bandwidths available in Landsat 8 compared to those found in the \gls{meris} and \gls{modis}, for instance. 
+
+% ------------------------------
+\subsection{Algorithms Integration}
+This research utilized different softwares and programming languages (i.e. Matlab, ENVI/IDL, SeaDAS, Hydrolight and GNU/Linux) at the different stages and most of the process implies manual work for each image. In order to make it operational and more user-friendly, the process should be automatized in just one language and a \gls{gui} developed. A good choice of programming language could Python for its versatility and for being free. This improvement could allow for an easier time series studies.
+
+% ------------------------------
+\subsection{In deep IOPs and AOPs analysis}
+A global application could be possible if the field-based library (LUT) is compressive enough. To accomplish this, a wider range of water bodies have to be included in the dataset. However, a more in deep analysis of how stable the IOPs of a certain region are over time is needed. 
+
+Also, more accurate information about scattering properties should be input to the Hydrolight in order to create the LUTs. An IOP-AOP inversion algorithm (semianalitics algorithm) could be utilized for this purpose since the only unknown is the \gls{b_boverb}, as described in \S\ref{subsec:semianalitic}.
 
 % -------------------------------------
 \section{Concluding Remarks}
-% although a definitive assessment cannot be made due to lack of enough concurrent in situ measurements
-
-These results demonstrate that for Case 2 waters, the solution for the ocean color measurements likely needs to be local and not global, as opposed to Case 1 waters. This local solution as implemented here, the combined MoB-ELM algorithm with Concha and Schott's $C_a$ retrieval algorithm, requires some knowledge of the waters to be studied, such as inherent optical properties (IOPs) and CPA concentration in at least one site.
-
-The presented work is a very limited study using only a single data set. The results need to be tested on a much larger set of data to see if the can be generalized. This implies that more {\it in situ} data need to be collected.
+The retrieval results demonstrated that for Case 2 waters, the solution for the ocean color measurements likely needs to be local and not global, as opposed to Case 1 waters. This local solution as implemented here, the combined MoB-ELM algorithm with Concha and Schott's $C_a$ retrieval algorithm, requires some knowledge of the waters to be studied, such as inherent optical properties (IOPs) and CPA concentration in at least one site.
 
 One approach that was not considered in this study is to apply different atmospheric algorithms based in the water type (Case 1 or Case 2). For example, to apply the NASA's standard algorithms to the lake (Case 1), and to apply to developed retrieval algorithm to the ponds (Case 2). An index could be created to differentiate between them.
 
 % Limitations
-One of the limitation of using Landsat 8 is its temporal resolution.
-
-Clear weather conditions in the area of study.
+One of the limitation of using Landsat 8 is its temporal resolution of 16-day, which does not allow for daily monitoring. Also, because this temporal resolution, the chance to get an image with clear weather conditions in the area of study is limited.
 
 To date, there are no other sources of free access, open to the international science community, satellite imagery with similar spatial resolution or similar standard product (e.g. MODIS chl-a product) to compare with. Therefore, a direct comparison of results from our approach with typical algorithms over water bodies smaller than one kilometer is not possible. This is a challenge that needs to be addressed since there is a particular interest from local communities for monitoring water bodies that are not resolvable by current ocean color satellites. This is the case of the ponds included in this study, which are less than one kilometer in size. This fact makes Landsat 8 a pioneer in the retrieval of water quality parameters over medium to small water bodies. This also opens a need for more field measurement collection (i.e. IOPs, $R_{rs}$ and concentrations) on a regular basis where water quality needs to be assessed for the validation of products derived from moderate spatial resolution sensors such a Landsat 8 and the upcoming Sentinel 2. 
+
+Finally, this work demonstrate the feasibility of using Landsat-like sensors for the monitoring of coastal and inland water, preparing the way for future mission, such a Landsat 9, Landsat 10, and Sentinel 2. The future of ocean color is in the coastal zones using high spatial resolution, and Landsat 8 is an step forward through this goal.
